[workspace]
resolver = "3"
members = ["client", "grpc", "server", "shared", "storage", "telegram"]
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
prost = "0.14"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "3.0", features = ["uuid-1", "chrono-0_4", "serde"] }
