[package]
name = "grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types = { version = "0.14", features = ["chrono"] }
tonic-prost = "0.14"
validator = "0.20"
shared = { path = "../shared" }
anyhow.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
