[package]
name = "publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
shared = { path = "../shared" }
client = { path = "../client" }
anyhow.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
vk = { path = "../vk" }
