[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tonic-reflection = "0.14"
grpc = { path = "../grpc" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true, features = ["derive"] }
shared = { path = "../shared" }
storage = { path = "../storage" }
