[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
mongodb = { version = "3.3", features = ["bson-3"] }
bson = { workspace = true, features = ["uuid-1", "chrono-0_4", "serde_with-3"] }
anyhow.workspace = true
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
futures = "0.3.31"
