[package]
name = "vk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["gzip", "json", "stream"] }
serde = { workspace = true, features = ["derive"] }
shared = { path = "../shared" }
serde_json = "1.0.144"
